--- a/Conisoft/templates/base.html
+++ b/Conisoft/templates/base.html
@@ -41,7 +41,6 @@ https://templatemo.com/tm-516-known
           </div>
      </section>
 
-<<<<<<< HEAD
 
      <!-- MENU -->
      <section class="navbar custom-navbar navbar-fixed-top" role="navigation">
@@ -55,19 +54,19 @@ https://templatemo.com/tm-516-known
                     </button>
 
                     <!-- lOGO TEXT HERE -->
-                    <a href="#" class="navbar-brand">Conisoft</a>
+                    <a href="{% url 'home' %}" class="navbar-brand">Conisoft</a>
                </div>
 
                <!-- MENU LINKS -->
                <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                         <li><a href="#top" class="smoothScroll">Home</a></li>
-                         <li><a href="#about" class="smoothScroll">About</a></li>
-                         <li><a href="#team" class="smoothScroll">Teachers</a></li>
-                         <li><a href="#courses" class="smoothScroll">Courses</a></li>
-                         <li><a href="#testimonial" class="smoothScroll">Reviews</a></li>
-                         <li><a href="#contact" class="smoothScroll">Contact</a></li>
-                         {% if not user.is_authenticated %} <li><a href="/register">Register</a></li>{% endif %}
+                         <li class="{% if request.path == '/' %} active {% endif %}"><a href="#home" class="smoothScroll">Home</a></li>
+                         <li><a href="{% if request.path == '/register' %} /#about {% else %}#about{% endif %}" class="smoothScroll">About</a></li>
+                         <!-- <li><a href="#team" class="smoothScroll">Teachers</a></li> -->
+                         <li><a href="{% if request.path == '/register' %} /#courses {% else %}#courses{% endif %} " class="smoothScroll">Courses</a></li>
+                         <li><a href="{% if request.path == '/register' %} /#testimonial {% else %}#testimonial{% endif %}" class="smoothScroll">Previous Editions</a></li>
+                         <li><a href="{% if request.path == '/register' %} /#contact {% else %}#contact{% endif %}" class="smoothScroll">Contact</a></li>
+                         {% if not user.is_authenticated %} <li class="{% if request.path == '/register' %} active {% endif %}"><a href="/register">Register</a></li>{% endif %}
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
@@ -75,11 +74,11 @@ https://templatemo.com/tm-516-known
                     </ul>
                     {% if not user.is_authenticated %}
                     <ul class="nav navbar-nav navbar-right">
-                         <li><a href="/login">login</a></li>
+                         <li><a href="/login">Login</a></li>
                     </ul>
                     {% else %}
                     <ul class="nav navbar-nav navbar-right">
-                         <li><a href="/logout">logout</a></li>
+                         <li><a href="/logout">Logout</a></li>
                     </ul>
                     {% endif %}
 
@@ -88,8 +87,6 @@ https://templatemo.com/tm-516-known
           </div>
      </section>
 
-=======
->>>>>>> 0cff2a88dcb721ff431bbaa404abd17d86dad2e6
      <!-- MAIN -->
      <main>
           {% block content %}
