--- a/Conisoft/templates/register.html
+++ b/Conisoft/templates/register.html
@@ -1,60 +1,18 @@
-{% extends "index.html" %}
-
-{% block form %} 
-{% load crispy_forms_tags %}         
-
-<!--Register--> 
-<section id="contact">
-	<div class="container">
-		 <div class="row">
-
-			  <div class="col-md-6 col-sm-12">
-				   {% load crispy_forms_tags %}
-
-				   <!--Register-->
-				   <div class="container py-5">
-						<h1>Register</h1>
-						<form method="POST">
-							 {% csrf_token %}
-							 {{ register_form|crispy }}
-							 <button class="btn btn-primary" type="submit">Register</button>
-						</form>
-						<p class="text-center">If you already have an account, <a href="/login">login</a> instead.</p>
-				   </div>
-			  </div>
-
-		 </div>
-	</div>
-</section>
-
-
-{% endblock %}
+{% extends "base.html" %}
 
 {% block content %}
-{% load crispy_forms_tags %}         
+{% load crispy_forms_tags %}
 
-<!--Register--> 
-<section id="contact">
-	<div class="container">
-		 <div class="row">
+<!--Register-->
+<div class="container py-5">
+	<h1>Register</h1>
+	<form method="POST">
+		{% csrf_token %}
+		{{ register_form|crispy }}
+		<button class="btn btn-primary" type="submit">Register</button>
+	</form>
+	<p class="text-center">If you already have an account, <a href="/login">login</a> instead.</p>
+</div>
 
-			  <div class="col-md-6 col-sm-12">
-				   {% load crispy_forms_tags %}
-
-				   <!--Register-->
-				   <div class="container py-5">
-						<h1>Register</h1>
-						<form method="POST">
-							 {% csrf_token %}
-							 {{ register_form|crispy }}
-							 <button class="btn btn-primary" type="submit">Register</button>
-						</form>
-						<p class="text-center">If you already have an account, <a href="/login">login</a> instead.</p>
-				   </div>
-			  </div>
-
-		 </div>
-	</div>
-</section>
 
 {% endblock %}
