--- a/Conisoft/templates/base.html
+++ b/Conisoft/templates/base.html
@@ -4,15 +4,8 @@
 <html lang="en">
 
 <head>
-
      <title>Conisoft 2021</title>
-     <!-- 
 
-Known Template 
-
-https://templatemo.com/tm-516-known
-
--->
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=Edge">
      <meta name="description" content="">
@@ -60,37 +53,38 @@ https://templatemo.com/tm-516-known
                <!-- MENU LINKS -->
                <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                         <li class="{% if request.path == '/' %} active {% endif %}"><a href="#home" class="smoothScroll">Home</a></li>
-                         <li><a href="{% if request.path == '/register' %} /#about {% else %}#about{% endif %}" class="smoothScroll">About</a></li>
-                         <!-- <li><a href="#team" class="smoothScroll">Teachers</a></li> -->
-                         <li><a href="{% if request.path == '/register' %} /#courses {% else %}#courses{% endif %} " class="smoothScroll">Courses</a></li>
-                         <li><a href="{% if request.path == '/register' %} /#testimonial {% else %}#testimonial{% endif %}" class="smoothScroll">Previous Editions</a></li>
-                         <li><a href="{% if request.path == '/register' %} /#contact {% else %}#contact{% endif %}" class="smoothScroll">Contact</a></li>
-                         {% if not user.is_authenticated %} <li class="{% if request.path == '/register' %} active {% endif %}"><a href="/register">Register</a></li>{% endif %}
+                         {% if 'register' in request.path or 'login' in request.path %}
+                              <li class="active"><a href="/#home" class="smoothScroll">Home</a></li>
+                              <li><a href="/#about" class="smoothScroll">Courses</a></li>
+                              <li><a href="/#courses" class="smoothScroll">About</a></li>
+                              <li><a href="/#testimonial" class="smoothScroll">Previous Editions</a></li>
+                              <li><a href="/#footer" class="smoothScroll">Contact</a></li>
+                         {% else %}
+                              <li class="active"><a href="#home" class="smoothScroll">Home</a></li>
+                              <li><a href="#about" class="smoothScroll">Courses</a></li>
+                              <li><a href="#courses" class="smoothScroll">About</a></li>
+                              <li><a href="#testimonial" class="smoothScroll">Previous Editions</a></li>
+                              <li><a href="#footer" class="smoothScroll">Contact</a></li>
+                         {% endif %}
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
-                         <li><a href="#"><i class="fa fa-phone"></i> +52 (664) 9797500</a></li>
-                    </ul>
-                    {% if not user.is_authenticated %}
-                    <ul class="nav navbar-nav navbar-right">
+                         {% if not user.is_authenticated %}
                          <li><a href="/login">Login</a></li>
-                    </ul>
-                    {% else %}
-                    <ul class="nav navbar-nav navbar-right">
+                         <li class="{% if request.path == '/register' %} active {% endif %}"><a href="/register">Register</a></li>
+                         {% else %}
                          <li><a href="/logout">Logout</a></li>
+                         {% endif %}
                     </ul>
-                    {% endif %}
-
                </div>
-
           </div>
      </section>
+
 
      <!-- MAIN -->
      <main>
           {% block content %}
-          {% endblock %}
+          {% endblock content %}
      </main>
 
 
@@ -144,30 +138,9 @@ https://templatemo.com/tm-516-known
                               </div>
                          </div>
                     </div>
-
-                    <div class="col-md-4 col-sm-12">
-                         <div class="footer-info newsletter-form">
-                              <div class="section-title">
-                                   <h2>Newsletter Signup</h2>
-                              </div>
-                              <div>
-                                   <div class="form-group">
-                                        <form action="#" method="get">
-                                             <input type="email" class="form-control" placeholder="Enter your email"
-                                                  name="email" id="email" required="">
-                                             <input type="submit" class="form-control" name="submit" id="form-submit"
-                                                  value="Signup">
-                                        </form>
-                                        <span><sup>*</sup> Please note - we do not spam your email.</span>
-                                   </div>
-                              </div>
-                         </div>
-                    </div>
-
                </div>
           </div>
      </footer>
-
 
      <!-- SCRIPTS -->
      <script src="{% static 'js/jquery.js' %}"></script>
@@ -177,5 +150,4 @@ https://templatemo.com/tm-516-known
      <script src="{% static 'js/custom.js' %}"></script>
 
 </body>
-
 </html>
