--- a/Conisoft/templates/register.html
+++ b/Conisoft/templates/register.html
@@ -6,7 +6,7 @@
 <!-- Register -->
 <div class="container py-5">
 	<h1>Register</h1>
-	<form method="POST">
+	<form method="POST" enctype='multipart/form-data'>
 		{% csrf_token %}
 		{{ register_form|crispy }}
 		<button class="btn btn-primary" type="submit">Register</button>
