--- a/Conisoft/templates/base.html
+++ b/Conisoft/templates/base.html
@@ -46,8 +46,8 @@
                <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
                          {% if 'register' in request.path or 'login' in request.path or 'workshops' in request.path %}
-                              <li class="active"><a href="/#home" class="smoothScroll">Home</a></li>
-                              <li><a href="/workshops" class="smoothScroll">Workshops</a></li>
+                              <li><a href="/#home" class="smoothScroll">Home</a></li>
+                              <li class ="{% if request.path == '/workshops' %} active {% endif %}"><a href="/workshops" class="smoothScroll">Workshops</a></li>
                               <li><a href="/#about" class="smoothScroll">Requirments</a></li>
                               <li><a href="/#testimonial" class="smoothScroll">Past Editions</a></li>
                               <li><a href="/#footer" class="smoothScroll">Contact</a></li>
@@ -70,7 +70,7 @@
                          {% endif %}
 
                          {% if not user.is_authenticated %}
-                         <li><a href="/login">Login</a></li>
+                         <li class ="{% if request.path == '/login' %} active {% endif %}"><a href="/login">Login</a></li>
                          <li class="{% if request.path == '/register' %} active {% endif %}"><a href="/register">Register</a></li>
                          {% else %}
                          <li><a href="/logout">Logout</a></li>
