--- a/Conisoft/templates/index.html
+++ b/Conisoft/templates/index.html
@@ -15,7 +15,7 @@
                                    <h1>{{ object.heading }}</h1>
                                    <h3>{{ object.text }}
                                    </h3>
-                                   <a href="/workshops" class="section-btn btn btn-default smoothScroll">Take a course</a>
+                                   <a href="/workshops" class="section-btn btn btn-default smoothScroll">Join a workshop</a>
                               </div>
                               <div class="sdgku-logo-container">
                                    <img src="{{ object.logo_image.url }}" class="logo" style="width: 500px;">
@@ -34,9 +34,9 @@
           <div class="row">
                <div class="col-md-12 col-sm-12">
                     <div class="section-title">
-                         <h2>Workshops <small>Upgrade your skills with newest courses</small></h2>
+                         <h2>Workshops <small>Upgrade your skills with newest courses</small></h2><a href ="/workshops" class="btn btn-lg btn-primary">View all</a>
                     </div>
-
+                    
                     <div class="owl-carousel owl-theme owl-courses">
                          {% for object in courses %}
                          <div class="col-md-4 col-sm-4">
@@ -54,7 +54,7 @@
                                         </div>
 
                                         <div class="courses-detail">
-                                             <h3><a href="#">{{ object.name }}</a></h3>
+                                             <h3><a href="/workshops">{{ object.name }}</a></h3>
                                              <p>{{ object.description }}.</p>
                                         </div>
 
@@ -65,7 +65,7 @@
                                                   <span>{{ object.presenter }}</span>
                                              </div>
                                              <div class="courses-price">
-                                                  <a href="#"><span>USD 80</span></a>
+                                                  <a href="/workshops"><span>Attend</span></a>
                                              </div>
                                         </div>
                                    </div>
