--- a/Conisoft/templates/base.html
+++ b/Conisoft/templates/base.html
@@ -66,7 +66,7 @@
                          {% endif %}
 
                          {% if user.is_staff %}
-                         <li><a href="#">Manage</a></li>
+                         <li><a href="/manage">Manage</a></li>
                          {% endif %}
 
                          {% if not user.is_authenticated %}
