--- a/Conisoft/templates/base.html
+++ b/Conisoft/templates/base.html
@@ -45,7 +45,7 @@
                <!-- MENU LINKS -->
                <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                         {% if 'register' in request.path or 'login' in request.path or 'workshops' in request.path %}
+                         {% if 'register' in request.path or 'login' in request.path or 'workshops' in request.path or 'manage' in request.path %}
                               <li><a href="/#home" class="smoothScroll">Home</a></li>
                               <li class ="{% if request.path == '/workshops' %} active {% endif %}"><a href="/workshops" class="smoothScroll">Workshops</a></li>
                               <li><a href="/#about" class="smoothScroll">Requirments</a></li>
@@ -66,7 +66,7 @@
                          {% endif %}
 
                          {% if user.is_staff %}
-                         <li><a href="/manage">Manage</a></li>
+                         <li class ="{% if request.path == '/manage' %} active {% endif %}"><a href="/manage">Manage</a></li>
                          {% endif %}
 
                          {% if not user.is_authenticated %}
