--- a/Conisoft/templates/manage.html
+++ b/Conisoft/templates/manage.html
@@ -8,35 +8,41 @@
 
             <div class="col-md-12 col-sm-12">
                 <div class="section-title">
-                    <h2>Users</h2>
+                    <h2>Unapproved Users</h2>
+                    <p>With receipts</p>
                 </div>
-
+                <!-- How to display reciept image -->
+                <!-- <img src='media/{{ user.receipt }}' alt=""> -->
+                
                 {% for user in users %}
+                    {% if user.is_approved == False and user.receipt %}
                 <div class="col-md-4 col-sm-4">
                     <div class="item">
-                        <div class="courses-thumb">
-                            <div class="courses-top">
-                                
-                            </div>
-
-                            <div class="courses-detail">
-                                <h3><a href="#">{{ user.Full_Name }}</a></h3>
-                                <img src='media/{{ user.receipt }}' alt="">
-                            </div>
-
-                            <div class="courses-info">
-                                <div class="courses-author">
-                                    
-                                    <span>{{ object.presenter }}</span>
-                                </div>
-                                <div class="courses-price">
-                                    <span class="subscribe_button" style="cursor:pointer;"
-                                        data-catid="{{ object.id }}">Atttend</span>
-                                </div>
-                            </div>
+                        <div style="display: flex; flex-direction: column; width: 40%; text-align: center;">
+                            <h3>{{ user.Full_Name }}</h3>
+                            <img src='media/{{ user.receipt }}' alt="User has not uploaded a receipt">
+                            <button style="border-top-left-radius: 0%; border-top-right-radius: 0%;" class="btn btn-primary btn-lg">Approve</button>
                         </div>
                     </div>
                 </div>
+                {% endif %}
+                {% endfor %}
+                <div class="section-title">
+                    <h2>Unapproved Users</h2>
+                    <p>Without receipts</p>
+                </div>
+                {% for user in users %}
+                    {% if user.is_approved == False and user.receipt == '' %}
+                <div class="col-md-4 col-sm-4">
+                    <div class="item">
+                        <div style="display: flex; flex-direction: column; width: 40%; text-align: center;">
+                            <h3>{{ user.Full_Name }}</h3>
+                            <h4>User has not uploaded a Receipt</h4>
+                            <button style="border-top-left-radius: 0%; border-top-right-radius: 0%;" class="btn btn-primary btn-lg">Approve</button>
+                        </div>
+                    </div>
+                </div>
+                {% endif %}
                 {% endfor %}
             </div>
         </div>
